<resources>
    <string name="app_name">cst438project1</string>
    <string name="userdeftext">Hello</string>
    <string name="addCourseButton">Add Course</string>
    <string name="deleteCourseButton">Delete Course</string>
    <string name="addCourseDisplay">Adding a New Course</string>
    <string name="courseTitleHint">Course Title</string>
    <string name="courseInstructorHint">Course Instructor</string>
    <string name="startDateHint">Start Date</string>
    <string name="endDateHint">End Date</string>
    <string name="addCourseDescriptionHint">Course Description</string>
    <string name="addCourseSubmitButtonText">Create Course</string>
    <string name="placeHolder">placeHolder</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Don\'t have an account? Create one here </string>
    <string name="createAccount">Create</string>
    <string name="enroll">Enroll in a Course</string>
    <string name="enrollTitle">Pick A Course To Enroll In</string>
    <string name="simpleEnroll">Enroll</string>
    <string name="returnButton">Return</string>
    <string name="CourseDisplay">Course Information</string>
    <string name="courseTitlePlaceHolder">Course Title</string>
    <string name="courseInstructorPlaceHolder">Course Instructor</string>
    <string name="courseStartPlaceHolder">Course Start Date</string>
    <string name="courseEndPlaceHolder">Course End Date</string>
    <string name="courseDescriptionPlaceholder">Course Description</string>
    <string name="InstructorIntro">Instructor:</string>
    <string name="StartDateIntro">Terms Starts:</string>
    <string name="EndDateIntro">Term Ends:</string>
    <string name="CourseDescriptionIntro">Description:</string>
    <string name="editCourseButton">Edit Course</string>
    <string name="itemPlaceHolder">View Course</string>
    <string name="gradeIntro">Your Current Grade: </string>
    <string name="gradePlaceholder">Grade Goes Here</string>
    <string name="viewAssignmentsDisplay">View Assignments</string>
    <string name="assignmentTitleIntro">Assignments For:</string>
    <string name="coursePlaceHolder">Course HERE</string>
    <string name="newAssignment">Add Assignment</string>
    <string name="createAssignmentPageTitle">Creating Assignment For:</string>
    <string name="addAssignmentButton">Create Assignment</string>
    <string name="cancel">Cancel</string>
    <string name="editAssignment">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Editing">Editing Course :</string>
    <string name="courseEditer">Course Title:</string>
    <string name="editSave">Save</string>
    <string name="logout">Logout</string>
    <string name="editUser">Edit User Info</string>
    <string name="editing">Editing:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="usernamePlaceholder">Username</string>
    <string name="deleteCourse">Deleting Courses</string>
</resources>
