<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPage">

    <TextView
        android:id="@+id/usernameTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="153dp"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/helloTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="50dp"
        android:layout_height="31dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:text="@string/userdeftext"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTextView" />

    <Button
        android:id="@+id/addCourseButton"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:text="@string/addCourseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerLine" />

    <Button
        android:id="@+id/deleteCourseButton"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/deleteCourseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerLine" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userPageRecycler"
        android:layout_width="339dp"
        android:layout_height="418dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/enrollButtonLink"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="36dp"
        android:text="@string/enroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editUserButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editUserButton"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="36dp"
        android:text="@string/editUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>