<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollActivity">

    <TextView
        android:id="@+id/enrollDisplayText"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="61dp"
        android:text="@string/enrollTitle"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrollDisplayText" />

    <Button
        android:id="@+id/enrollSubmitButton"
        android:layout_width="204dp"
        android:layout_height="43dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="271dp"
        android:text="@string/simpleEnroll"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="82dp"
        android:text="@string/returnButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>